--- a/src/Pagination.css
+++ b/src/Pagination.css
@@ -1,102 +1,56 @@
-/* Basic table styles */
-table {
+.table-header {
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: bold;
+    font-size: 24px;
+  }
+  
+  .table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
-}
-
-th, td {
+  }
+  
+  .table th,
+  .table td {
     padding: 12px;
     text-align: left;
     border-bottom: 1px solid #ddd;
-}
-
-/* Header styles */
-th {
+  }
+  
+  .table th {
     background-color: #009688;
     color: white;
-}
-
-/* Row hover effect */
-tr:hover {
+  }
+  
+  .table tbody tr:hover {
     background-color: #f5f5f5;
-}
-
-/* Even row styles */
-tr:nth-child(even) {
+  }
+  
+  .table tbody tr:nth-child(even) {
     background-color: #f9f9f9;
-}
-
-tr:last-child td {
-    border-bottom-color:  #00796b; /* Color for the last row's bottom border */
-}
-/* Table container styles */
-.table-container {
-    margin: 20px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    background-color: white;
-    
-}
-
-/* Pagination styles */
-/* Pagination styles */
-.pagination {
+  }
+  
+  .pagination {
     display: flex;
     justify-content: center;
     align-items: center;
     list-style-type: none;
     padding: 0;
-}
-
-.pagination li {
-    margin: 0 10px; /* Adjust the margin to add space between the items */
-}
-
-.pagination li a {
+    margin-top: 20px;
+  }
+  
+  .pagination-button {
+    margin-right: 10px;
+    background-color: #00796b;
     color: white;
-    background-color: #009688;
     padding: 8px 16px;
     text-decoration: none;
     border-radius: 4px;
-   
-}
-
-.pagination li a:hover {
-    background-color: #00796b;
-   
-}
-
-
-/* Header title styles */
-.table-header {
-    text-align: center;
-    font-size: 24px;
-    margin-bottom: 20px;
-    font-weight: bold;
-}
-
-@media (max-width: 600px) {
-    table, thead, tbody, th, td, tr {
-        display: block;
-    }
-    
-    th, td {
-        width: 100%;
-        box-sizing: border-box;
-        
-    }
-    
-    tr {
-        margin-bottom: 15px;
-    }
-    
-    th {
-        text-align: center;
-    }
-    
-    td {
-        text-align: center;
-    }
-}
+    border: none;
+  }
+  
+  .pagination-button:hover {
+    background-color: #005a4d;
+  }
+  
